RedditAPI/force-app/main/default/objects/Reddit_Post__c/Reddit_Post__c.object-meta.xml
<CustomObject>
    <label>Reddit Post</label>
    <nameField>
        <label>Reddit Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reddit Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>