RedditAPI/force-app/main/default/objects/Reddit_Post__c/fields/Author_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Full_Name__c</fullName>
    <label>Author Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>