RedditAPI/force-app/main/default/objects/Reddit_Post__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IF (NOT(ISBLANK(Thumbnail__c )),IMAGE(Thumbnail__c, &apos;Image&apos;, 200, 200), &apos;No image to show&apos;)</formula>
    <label>Photo</label>
    <type>Text</type>
</CustomField>