RedditAPI/force-app/main/default/objects/Reddit_Post__c/fields/Selftext__c.field-meta.xml
<CustomField>
    <fullName>Selftext__c</fullName>
    <label>Selftext</label>
    <type>TextArea</type>
</CustomField>