RedditAPI/force-app/main/default/objects/Reddit_Post__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Author_Full_Name__c</columns>
    <columns>Thumbnail__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>